I change width from 500px to 350 and heigh from 175 er)
exit();

--- a/templates/aboutsinger.html
+++ b/templates/aboutsinger.html
@@ -206,9 +206,9 @@ text-align: left;
 	
 <style>
 .card-wide{
-width: 500px;
+width: 350px;
 color: #fff;
-  height: 176px;
+  height: 350px;
 }
 </style>
 
@@ -227,13 +227,13 @@ color: #fff;
 		  Profession : {{ person.profession }}<br>
   </div>
                   <div class="card-action">
-<a href="{{ person.contact }}">more...</a>
+<a href="{{ person.contact }}">view Detail</a>
           
         </div>
       </div>
     </div>
     </div>
-  </div><br>
+  </div><br><br>
             {% endfor %}
   </div><br><br>
 <br><br><br><br><br>
