--- a/templates/aboutparli.html
+++ b/templates/aboutparli.html
@@ -210,9 +210,9 @@ text-align: left;
 	
 <style>
 .card-wide{
-width: 500px;
+width: 350px;
 color: #fff;
-  height: 176px;
+  height: 350px;
 }
 </style>
 
@@ -231,13 +231,13 @@ color: #fff;
 		  Profession : {{ person.profession }}<br>
   </div>
                   <div class="card-action">
-<a href="{{ person.contact }}">more...</a>
+<a href="{{ person.contact }}">View Detail</a>
           
         </div>
       </div>
     </div>
     </div>
-  </div><br>
+  </div><br><br>
             {% endfor %}
   </div><br><br>
 <br><br><br><br><br>
