--- a/templates/search.html
+++ b/templates/search.html
@@ -178,37 +178,48 @@ text-align: left;
 
   <main class="pt-5 mx-lg-5">
     <div class="container-fluid mt-5">
-        <div style="width:45%; float:left; overflow:hidden">
+        
+<div style="width:45%; overflow:hidden">
+	
 <style>
-.demo-card-wide.mdl-card {
-	color: #fff;
-	height: 350px;
-                         }
-.demo-card-wide > .mdl-card__menu {
-	color: #fff;
+.card-wide{
+width: 500px;
+color: #fff;
+  height: 320px;
 }
 </style>
-
 {% if results %}
 {% for result in results %}
-<div class="demo-card-s mdl-card mdl-shadow--2dp">
-	<div class="mdl-card__title" style={{ result.image }}>
-		<h2 class="mdl-card__title-text"></h2>
-	</div>
-	<div class="mdl-card__supporting-text">
-		<font color="black">
-			Name :{{ result.name }}<br>
-			<br>
-			Profession : {{ result.profession }} <br>
-			<a href= {{ result.contact }}>View Detail...</a>
-	</div>
-</div>
-<br><br>
-{% endfor %}
-{% else %}
- <h3 class="center-align"> Could find matched person</h3>
+  <div class="row">
+    <div class="col s12 m7">
+	    <div class="card">
+<div class="card-image">
+	<div class="card-wide" style={{result.image}}>
+			
+           </div>
+      	  
+<div class="mdl-card__supporting-text">
+	  <font color="black">
+
+		  Name       : {{ result.name }} <br>
+<br>
+		  Profession : {{ result.profession }}<br>
+  </div>
+                  <div class="card-action">
+<a href="{{ result.contact }}">View Details</a>
+          
+        </div>
+      </div>
+    </div>
+    </div>
+  </div><br><br>
+            {% endfor %}
+	{% else %}
+<h3 class="center-align">Could find matched person</h3>
 {% endif %}
-</div>
+
+  </div><br><br>
+<br><br><br>
 
 <div class="footer">
 
