Fixed card in search.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -206,7 +206,7 @@ color: #fff;
 		  Profession : {{ result.profession }}<br>
   </div>
                   <div class="card-action">
-<a href="{{ result.contact }}">View Details</a>
+<a href="{{ result.contact }}">View Details...</a>
           
         </div>
       </div>
