push group link

--- a/templates/aboutactor.html
+++ b/templates/aboutactor.html
@@ -132,7 +132,7 @@ text-align: left;
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/SanThorl/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/orgs/sun-mdy-geo/dashboard" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
@@ -208,7 +208,7 @@ text-align: left;
 .card-wide{
 width: 500px;
 color: #fff;
-  height: 350px;
+  height: 320px;
 }
 </style>
 
