--- a/templates/aboutwriter.html
+++ b/templates/aboutwriter.html
@@ -135,7 +135,7 @@ text-align: left;
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/SanThorl/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/orgs/sun-mdy-geo/dashboard" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
