sun-mdy-geo link

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@ text-align: left;
                         </li>
                         <li class="nav-item">
 <div>
-                            <a href="https://github.com/ayeethirikyaww/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/orgs/sun-mdy-geo/dashboard" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
@@ -208,7 +208,8 @@ text-align: left;
     <!--Main layout-->
     <main class="pt-5 mx-lg-5">
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-<form action="/" method="POST" style="margin-left:55%;">
+	    
+	    <form action="/" method="POST" style="margin-left:55%;">
             <div class="mdl-textfield mdl-js-textfield  mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="text" name="search" id="sample3">
              <label class="mdl-textfield__label" for="sample3">Search</label>
@@ -217,7 +218,8 @@ text-align: left;
               <i class="material-icons">search</i>
            </button>
           </form>
-        </div>
+	    
+    </div>
 	<div class="container_fluid mt-5">
 <div class="row">
     <div class="col s12 m7">
