--- a/templates/aboutparli.html
+++ b/templates/aboutparli.html
@@ -127,8 +127,8 @@ text-align: left;
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
                             <a href="https://www.facebook.com/ah.thawm" class="nav-link waves-effect" target="_blank">
-                                <i class="fa fa-facebook"></i>
-                            </a>
+                               <i class="fa fa-facebook"></i>
+			    </a>
                         </li>
                         <li class="nav-item">
                             <a href="https://twitter.com/SThawm" class="nav-link waves-effect" target="_blank">
@@ -136,7 +136,7 @@ text-align: left;
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/SanThorl/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/sun-mdy-geo" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
