--- a/templates/aboutsinger.html
+++ b/templates/aboutsinger.html
@@ -132,7 +132,7 @@ text-align: left;
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/SanThorl/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/sun-mdy-geo" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
