Change github link

--- a/templates/search.html
+++ b/templates/search.html
@@ -123,7 +123,7 @@ text-align: left;
                         </li>
                         <li class="nav-item">
 <div>
-                            <a href="https://github.com/Santhorl/" class="nav-link border border-light rounded waves-effect"
+                            <a href="https://github.com/sun-mdy-geo/WhoisWhoinMyanmar-SUN" class="nav-link border border-light rounded waves-effect"
                                 target="_blank">
                                 <i class="fa fa-github mr-2"></i>GitHub
                             </a>
